--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Frontend Mentor | Officelite coming soon site</title>
+    <title>Officelite coming soon site</title>
   </head>
   <body>
     <div id="root"></div>
